# iceye-ds-interview-task

./: .gitignore  README.md  flood_prediction.ipynb  global_flood_db.py  glofas_flood_hazard.py  helpers.py  pyproject.toml  sentinel1.py
